publish: Merge pull request #46 from resource-watch/delete/dataset
generated from commit c96af924366d2042a35df7e2f0126f5fa5a1a398

--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -1054,7 +1054,7 @@ When creating a dataset, if any of the fields has a numerical name (for example,
 
 <p><strong>When a dataset is deleted the user&rsquo;s applications that were present on the dataset will be removed from it. If this results in a dataset without applications, the dataset itself will be then deleted.</strong></p>
 
-<p>Datasets can be deleted either by any user with role ADMIN or by the user with role MANAGER that created them. Note that the deletion process cascades; deleting a dataset will also remove all layer, vocabularies, and metadata entities associated with it.</p>
+<p>Datasets can be deleted either by any user with role ADMIN or by the user with role MANAGER that created them. Note that the deletion process cascades; deleting a dataset will also remove all the layers, widgets, vocabularies, related knowledge graph elements, and metadata entities associated with it.</p>
 
 <aside class="warning">
 Deleting a dataset removes it permanently! It is recommended that you save a local copy before doing so.
