--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -110,7 +110,8 @@
       <div id="toc">
       </div>
         <ul class="toc-footer">
-            <li><a href='http://ui.resourcewatch.org'>Sign Up for a Developer Key</a></li>
+            <li><a href='https://ui.resourcewatch.org'>Sign Up for a Developer Key</a></li>
+            <li><a href='https://github.com/resource-watch/doc-api'>Contribute to these docs</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
